# ai-builders-day-example

./: .gitignore  Makefile  README.md  credentials.sh.tmpl  lefthook.yml
agents/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
agents/src/agents/: __init__.py  context.py  init.py  logger.py  main.py
terraform/: 01_main.tf  02_variable.tf  03_datasource.tf  11_auth0.tf  21_iam.tf  22_ecr.tf  23_cloudwatch_logs.tf  31_bedrock_agentcore.tf  98_output.tf  99_tfquery.hcl
terraform/template_file/: .env.tmpl  env.sh.tmpl  secrets.toml.tmpl
ui/: pyproject.toml
ui/src/ui/: __main__.py  agentcore_wrapper.py  init.py  logger.py  main.py
ui/src/ui/authentication/: __init__.py  oauth2.py  util.py
